// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrillDownTable click to drill down works 1`] = `
Array [
  <div
    className="dd-linker-item dd-clickable"
  >
    <span>
      1
      <span
        className="dd-caret"
      >
         ▼
      </span>
    </span>
  </div>,
  <div
    className="dd-linker-item dd-clickable"
  >
    <span>
      2
      <span
        className="dd-caret"
      >
         ▼
      </span>
    </span>
  </div>,
  <div
    className="dd-linker-item dd-clickable"
  >
    <span>
      3
      <span
        className="dd-caret"
      >
         ▼
      </span>
    </span>
  </div>,
]
`;

exports[`DrillDownTable click to drill down works: After first drillDown tr index 0 1`] = `"idlocationparent_idspray_coveragespray_effectiveness"`;

exports[`DrillDownTable click to drill down works: After first drillDown tr index 1 1`] = `"4 ▼HFC 1180%80%"`;

exports[`DrillDownTable click to drill down works: After first drillDown tr index 2 1`] = `"5 ▼HFC 2180%80%"`;

exports[`DrillDownTable click to drill down works: After second Drilldown tr index 0 1`] = `"idlocationparent_idspray_coveragespray_effectiveness"`;

exports[`DrillDownTable click to drill down works: After second Drilldown tr index 1 1`] = `"9Operational Area 9470%90%"`;

exports[`DrillDownTable click to drill down works: After second Drilldown tr index 2 1`] = `"10Operational Area 10480%100%"`;

exports[`DrillDownTable click to drill down works: After second Drilldown tr index 3 1`] = `"11Operational Area 114100%100%"`;

exports[`DrillDownTable click to drill down works: InitialRender tr index 0 1`] = `"idlocationparent_idspray_coveragespray_effectiveness"`;

exports[`DrillDownTable click to drill down works: InitialRender tr index 1 1`] = `"1 ▼District A80%80%"`;

exports[`DrillDownTable click to drill down works: InitialRender tr index 2 1`] = `"2 ▼District B75%85%"`;

exports[`DrillDownTable click to drill down works: InitialRender tr index 3 1`] = `"3 ▼District C90%90%"`;

exports[`DrillDownTable click to drill down works: InitialRender tr index 4 1`] = `"18District D0%0%"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 0 1`] = `"idgeographic_levelparent_idname"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 1 1`] = `"64301afa-e973-447b-a88c-4da20025c76f1Trat ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 2 1`] = `"7f204867-fab0-4246-a97c-92e0b936cab61Ubon Ratchathani ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 3 1`] = `"61707fc2-c6ac-4112-a8d6-2a48619583961Trat 2 ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 4 1`] = `"29400Katete ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 5 1`] = `"29420Lusaka ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 6 1`] = `"f8863022-ff88-4c22-b2d1-83f59f31b8740Oddar Meanchey Province ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 7 1`] = `"29390Chadiza ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 8 1`] = `"9c3c2db4-bddd-44c5-870a-a0eef539e4da0Lop Buri ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 9 1`] = `"29410Sinda ▼"`;

exports[`DrillDownTable pagination works correctly: page 1  tr index 10 1`] = `"39530Siavonga"`;

exports[`DrillDownTable pagination works correctly: page 2  tr index 0 1`] = `"idgeographic_levelparent_idname"`;

exports[`DrillDownTable pagination works correctly: page 2  tr index 1 1`] = `"39540Siavonga ▼"`;

exports[`DrillDownTable renders correctly lowest level hierarchy: full rendered data 1`] = `"idlocationparent_idspray_coveragespray_effectivenessNo Data Found"`;

exports[`DrillDownTable renders correctly with custom columns 1`] = `
Object {
  "0": Object {
    "Header": "Name",
    "accessor": "location",
  },
  "1": Object {
    "Cell": [Function],
    "Header": "ID",
    "accessor": "id",
  },
  "2": Object {
    "Header": "Parent ID",
    "accessor": "parent_id",
  },
  "3": Object {
    "Header": "Spray Coverage",
    "accessor": "spray_coverage",
  },
}
`;

exports[`DrillDownTable renders correctly with custom columns and custom linker column: Full render tr index 0 1`] = `"NameIDParent IDSpray Coverage"`;

exports[`DrillDownTable renders correctly with custom columns and custom linker column: Full render tr index 1 1`] = `"District A ▼180%"`;

exports[`DrillDownTable renders correctly with custom columns and custom linker column: Full render tr index 2 1`] = `"District B ▼275%"`;

exports[`DrillDownTable renders correctly with custom columns and custom linker column: Full render tr index 3 1`] = `"District C ▼390%"`;

exports[`DrillDownTable renders correctly with custom columns and custom linker column: Full render tr index 4 1`] = `"District D180%"`;

exports[`DrillDownTable renders correctly with derived columns 1`] = `
Object {
  "0": Object {
    "Cell": [Function],
    "Header": "id",
    "accessor": "id",
  },
  "1": Object {
    "Header": "location",
    "accessor": "location",
  },
  "2": Object {
    "Header": "parent_id",
    "accessor": "parent_id",
  },
  "3": Object {
    "Header": "spray_coverage",
    "accessor": "spray_coverage",
  },
  "4": Object {
    "Header": "spray_effectiveness",
    "accessor": "spray_effectiveness",
  },
}
`;

exports[`DrillDownTable works fine with extraCellProps: find the carret 1`] = `"idlocationparent_idspray_coveragespray_effectiveness1 +District A80%80%2 +District B75%85%3 +District C90%90%18District D0%0%"`;

exports[`DrillDownTable works fine with useDrillDown being flase: Full render 1`] = `"idlocationparent_idspray_coveragespray_effectiveness1 ▼District A80%80%4 ▼HFC 1180%80%9Operational Area 9470%90%10Operational Area 10480%100%11Operational Area 114100%100%5 ▼HFC 2180%80%12Operational Area 12586%100%2 ▼District B75%85%6 ▼HFC 3280%80%17HFC 1720%0%"`;
